schema/testdata/validation_relationships_one_to_one_relation_attr_both_sides/schema.keel
model Author {
    fields {
        written Post[]
        reviewed Post
        starPost Post {
            @unique
            @relation(author)
        }
    }
}

model Post {
    fields {
        author Author @relation(written)
        reviewedBy Author[]
    }
}
