schema/testdata/errors/relationships_one_to_one_relation_attr_both_sides.keel
model Author {
    fields {
        //expect-error:9:16:RelationshipError:The field 'written' does not have an associated field on Post
        written Post[]
        reviewed Post
        starPost Post {
            @unique
            @relation(author)
        }
    }
}

model Post {
    fields {
        author Author @relation(written)
        reviewedBy Author[]
    }
}
